优化 Trinity 样板核心合成状态